--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -220,7 +220,7 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
       <div class="p-3 pt-0">
         <div class="intro mb-3">
           <h4 class="text-center">BIMI</h4>
-          <p>Brand Indicators for Message Identification (BIMI) is an emerging email specification that allows brand images such as logos to appear in the inbox and next to the from address in supporting mailbox providers.</p>
+          <p>Brand Indicators for Message Identification (BIMI) is an emerging email specification that allows brand images such as logos to appear in the inbox and/or next to the from address in supporting mailbox providers.</p>
           <p><a href="/guides/bimi">Learn more about how BIMI works</a>.</p>
         </div> <!-- End intro -->
         {% if results.bimi.error %}
