Add point about Google Workspace support for BIMI

--- a/templates/guides/bimi.html.jinja
+++ b/templates/guides/bimi.html.jinja
@@ -25,6 +25,7 @@
     <li>Instant brand recognition in the inbox</li>
     <li>Stronger visual assurance that you are who you say you are</li>
     <li>Supported by most consumer mailbox providers</li>
+    <li>Support by Google includes Gmail for consumers and Google Workspace business users</li>
     </ul>
 
     <h3>Drawbacks</h3>
