--- a/templates/guides/bimi.html.jinja
+++ b/templates/guides/bimi.html.jinja
@@ -36,7 +36,7 @@
 
     <h3>DNS records</h3>
     <p>The BIMI Assertion Record is a DNS TXT record tells mailbox providers an HTTPS URL of the  image to display and optionally, an HTTPS URL to the certificate for the image. By default, the BIMI Assertion DNS record is located at the <code>default._bimi</code> subdomain. The <code>default</code> portion is a <a href="https://datatracker.ietf.org/doc/html/draft-brand-indicators-for-message-identification#name-selectors">selector</a>, so that organizations can choose to have a different image for specific emails using the <a href="https://datatracker.ietf.org/doc/html/draft-brand-indicators-for-message-identification#bimi-selector">BIMI-Selector email header.</a> or <a href="https://datatracker.ietf.org/doc/html/draft-brand-indicators-for-message-identification#name-local-part-selectors">Local-Part Selectors</a>.</p>
-    </p> The values for the BIMI Assertion Record are <code>tag=value</code> pairs separated by semicolons.</p>
+    </p> The value oft he BIMI Assertion Record is made up of <code>tag=value</code> pairs separated by semicolons.</p>
     <table class="table table-bordered table-striped">
     <caption class="visually-hidden">SPF mechanisms that require DNS lookups</caption>
     <thead>
