--- a/templates/guides/bimi.html.jinja
+++ b/templates/guides/bimi.html.jinja
@@ -24,7 +24,7 @@
     <ul>
     <li>Instant brand recognition in the inbox</li>
     <li>Stronger visual assurance that you are who you say you are</li>
-    <li>Supported by most consumer mailbox providers</li>
+    <li>Supported by many consumer mailbox providers</li>
     <li>Support by Google includes Gmail for consumers and Google Workspace business users</li>
     </ul>
 
