Fix error pages

--- a/templates/error.html.jinja
+++ b/templates/error.html.jinja
@@ -1,4 +1,5 @@
 {% extends "page.html.jinja"%}
+{%set page = 'error'%}
 {% set title = error %}
 {% block meta_description %}{% endblock %}
 {% block og_title %}{% endblock %}
