--- a/templates/guides/mta-sts-and-tls-rpt.html.jinja
+++ b/templates/guides/mta-sts-and-tls-rpt.html.jinja
@@ -1,21 +1,89 @@
 {% extends "page.html.jinja"%}
 {% set page = "mta-sts-and-tls-rpt-guide" %}
 {% set title = "MTA-STS and TLS-RPT Guide" %}
-{% block meta_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS Reporting (TLS-RPT){% endblock %}
+{% block meta_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS
+Reporting (TLS-RPT){% endblock %}
 {% block og_title %}MTA-STS & TLS-RPT Guide | {{site_name}} {% endblock %}
-{% block og_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS Reporting (TLS-RPT) {% endblock%}
+{% block og_description %}A quick and simple guide to SMTP MTA Strict Transport Security (MTA-STS) and SMTP TLS
+Reporting (TLS-RPT) {% endblock%}
 {% block content %}
 <div class="row justify-content-center">
   <h2 class="text-center">SMTP MTA Strict Transport Security (MTA-STS)</h2>
   <div class="row">
-  <div class="col offset-lg-2 col-lg-8">
-    <p>Placeholder text</p>
+    <div class="col offset-lg-2 col-lg-8">
+      <p>SMTP MTA Strict Transport Security (MTA-STS) (Defined in {{ "RFC 8461"|link_rfc }}) provides a way for domain
+        owners to tell email services that they should only send email to their domain over a verified TLS connection to
+        specific email servers. This prevents man-in-the-middle attacks, similar to how <a
+          href="https://en.wikipedia.org/wiki/HTTP_Strict_Transport_Security">HTTP Strict Transport Security (HSTS)</a>
+        works for web servers. With MTA-STS, the use of TLS can be enforced for incoming email from services that
+        support MTA-TLS without disabling port 25 and breaking applications that use <a
+          href="https://en.wikipedia.org/wiki/Opportunistic_TLS">opportunistic TLS</a> to send email.</p>
+      <p>Deployment of MTA-STS consists of a TXT DNS record, and a policy file hosted at a specific HTTPS URL. The TXT
+        DNS record must be located at the subdomain <code>_mta-sts</code>. In must start with <code>v=STSv1;</code>, and
+        include a unique alphanumeric ID. The ID is used to track policy updates to senders can see if a policy has
+        changed. By convention, this is usually a timestamp. For example, <code>v=STSv1; id=20160831085700Z;</code>.</p>
+      <p>The MTA-STS policy file must be located at <code>https://mta-sts.example.com/.well-known/mta-sts.txt</code>,
+        replacing <code>example.com</code> with the actual domain.</p>
+      <p>The MTA-TLS policy file uses <code>key:value</code> pairs, one per line:</p>
+      <table class="table table-bordered table-striped table-sm">
+        <caption class="visually-hidden">A table of MTA-STS policy keys and descriptions</caption>
+        <tbody>
+          <tr>
+            <th scope="row">version</th>
+            <td>Currently, only <code>STSv1</code> is supported</td>
+          </tr>
+          <tr>
+            <th scope="row">mode</th>
+            <td>
+              <p>One of:</p>
+              <ul>
+                <li><code>enforce</code>: In this mode, Sending mail servers <b>must not</b> deliver the email to hosts that fail MX matching or certificate validation or that do not support <code>STARTTLS</code>.</li>
+                <li><code>testing</code>: In this mode, sending email servers that support TLS-RPT should send a failure report and deliver then the email as normal.</li>
+                <li><code>none</code>: In this mode, Sending email servers should treat the domain as though it does not have any active policy.</li>
+              </ul>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">max_age</th>
+            <td><p>Max lifetime of the policy (plaintext non-negative
+                integer seconds, maximum value of <code>31557600</code>). Well-behaved clients
+                <b>should</b> cache a policy for up to this value from the last policy
+                fetch time. To mitigate the risks of attacks at policy refresh
+                time, it is expected that this value typically be in the range of
+                weeks or greater.
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <th scope="row">mx</th>
+            <td>A pattern of allowed MX hostnames, each on its own line. <code>*</code> can be used as a wildcard, and a
+              policy file may have multiple <code>mx</code> lines. For example:
+              <pre>
+    mx: mail.example.com
+    mx: *.example.net
+    </pre>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <p>
+      Here is a complete example policy file:
+      <pre>
+        version: STSv1
+        mode: enforce
+        mx: mail.example.com
+        mx: *.example.net
+        mx: backupmx.example.com
+        max_age: 604800
+      </pre>
+    </div>
+    </p>
+    <p>Start out with a policy in <code>testing</code> mode, and monitor TLS reporting (discussed below) for any legitimate failures. If no such failures are found, change the <code>mode</code> in the policy file to <code>enforce</code>, and update the <code>id</code> value in the <code>_mta-sts</code> TXT DNS record.</p>
+    <h2 class="text-center">SMTP TLS Reporting (TLS-RPT)</h2>
   </div>
-  <h2 class="text-center">SMTP TLS Reporting (TLS-RPT)</h2>
-</div>
-<div class="row">
-  <div class="col offset-lg-2 col-lg-8">
-    <p>Placeholder text</p>
+  <div class="row">
+    <div class="col offset-lg-2 col-lg-8">
+      <p>Placeholder text</p>
+    </div>
   </div>
-</div>
-{% endblock %}
+  {% endblock %}
