--- a/templates/guides/mta-sts-and-tls-rpt.html.jinja
+++ b/templates/guides/mta-sts-and-tls-rpt.html.jinja
@@ -11,9 +11,9 @@ Reporting (TLS-RPT) {% endblock%}
   <h2 class="text-center">SMTP MTA Strict Transport Security (MTA-STS)</h2>
   <div class="row">
     <div class="col offset-lg-2 col-lg-8">
-      <p>SMTP MTA Strict Transport Security (MTA-STS) (Defined in {{ "RFC 8461"|link_rfc }}) provides a way for domain
-        owners to tell email services that they should only send email to their domain over a verified TLS connection to
-        specific email servers. This prevents man-in-the-middle attacks, similar to how <a
+      <p>SMTP MTA Strict Transport Security (MTA-STS) is defined in {{ "RFC 8461"|link_rfc }} and provides a way for
+        domain owners to tell email services that they should only send email to their domain over a verified TLS
+        connection to specific email servers. This prevents man-in-the-middle attacks, similar to how <a
           href="https://en.wikipedia.org/wiki/HTTP_Strict_Transport_Security">HTTP Strict Transport Security (HSTS)</a>
         works for web servers. With MTA-STS, the use of TLS can be enforced for incoming email from services that
         support MTA-TLS without disabling port 25 and breaking applications that use <a
@@ -37,15 +37,19 @@ Reporting (TLS-RPT) {% endblock%}
             <td>
               <p>One of:</p>
               <ul>
-                <li><code>enforce</code>: In this mode, Sending mail servers <b>must not</b> deliver the email to hosts that fail MX matching or certificate validation or that do not support <code>STARTTLS</code>.</li>
-                <li><code>testing</code>: In this mode, sending email servers that support TLS-RPT should send a failure report and deliver then the email as normal.</li>
-                <li><code>none</code>: In this mode, Sending email servers should treat the domain as though it does not have any active policy.</li>
+                <li><code>enforce</code>: In this mode, Sending mail servers <b>must not</b> deliver the email to hosts
+                  that fail MX matching or certificate validation or that do not support <code>STARTTLS</code>.</li>
+                <li><code>testing</code>: In this mode, sending email servers that support TLS-RPT should send a failure
+                  report and deliver then the email as normal.</li>
+                <li><code>none</code>: In this mode, Sending email servers should treat the domain as though it does not
+                  have any active policy.</li>
               </ul>
             </td>
           </tr>
           <tr>
             <th scope="row">max_age</th>
-            <td><p>Max lifetime of the policy (plaintext non-negative
+            <td>
+              <p>Max lifetime of the policy (plaintext non-negative
                 integer seconds, maximum value of <code>31557600</code>). Well-behaved clients
                 <b>should</b> cache a policy for up to this value from the last policy
                 fetch time. To mitigate the risks of attacks at policy refresh
@@ -67,7 +71,7 @@ Reporting (TLS-RPT) {% endblock%}
         </tbody>
       </table>
       <p>
-      Here is a complete example policy file:
+        Here is a complete example policy file:
       <pre>
         version: STSv1
         mode: enforce
@@ -76,7 +80,9 @@ Reporting (TLS-RPT) {% endblock%}
         mx: backupmx.example.com
         max_age: 604800
       </pre>
-       <p>Start out with a policy in <code>testing</code> mode, and monitor TLS reporting (discussed below) for any legitimate failures. If no such failures are found, change the <code>mode</code> in the policy file to <code>enforce</code>, and update the <code>id</code> value in the <code>_mta-sts</code> TXT DNS record.</p>
+      <p>Start out with a policy in <code>testing</code> mode, and briefly monitor TLS reporting (discussed below) for any
+        legitimate failures. If no such failures are found, change the <code>mode</code> in the policy file to
+        <code>enforce</code>, and update the <code>id</code> value in the <code>_mta-sts</code> TXT DNS record.</p>
     </div>
     </p>
     <h2 class="text-center">SMTP TLS Reporting (TLS-RPT)</h2>
