--- a/templates/guides/mta-sts-and-tls-rpt.html.jinja
+++ b/templates/guides/mta-sts-and-tls-rpt.html.jinja
@@ -80,9 +80,14 @@ Reporting (TLS-RPT) {% endblock%}
         mx: backupmx.example.com
         max_age: 604800
       </pre>
-      <p>Start out with a policy in <code>testing</code> mode, and briefly monitor TLS reporting (discussed below) for any
+      <p>Start out with a policy in <code>testing</code> mode, and briefly monitor TLS reporting (discussed below) for
+        any
         legitimate failures. If no such failures are found, change the <code>mode</code> in the policy file to
-        <code>enforce</code>, and update the <code>id</code> value in the <code>_mta-sts</code> TXT DNS record.</p>
+        <code>enforce</code>, and update the <code>id</code> value in the <code>_mta-sts</code> TXT DNS record.
+      </p>
+      <div class="alert alert-info text-center" role="alert">
+        <b>Note:</b> Subdomains do not inherit MTA-TLS policies from their parent domain ({{"RFC 8461 § 3.4" | link_rfc}}). Any email subdomains must be configured separately.
+      </div>
     </div>
     </p>
     <h2 class="text-center">SMTP TLS Reporting (TLS-RPT)</h2>
