--- a/templates/base.html.jinja
+++ b/templates/base.html.jinja
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,23 +11,28 @@
   <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='icons/favicon-16x16.png') }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icons/favicon-32x32.png') }}">
   <link rel="icon" type="image/png" sizes="48x48" href="{{ url_for('static', filename='icons/favicon-48x48.png') }}">
-  <link rel="icon" type="image/png" sizes="256x256" href="{{ url_for('static', filename='icons/favicon-256x256.png') }}">
+  <link rel="icon" type="image/png" sizes="256x256"
+    href="{{ url_for('static', filename='icons/favicon-256x256.png') }}">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='icons/apple-touch-icon.png') }}">
   <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest') }}">
-  <meta name="description"content="{% block meta_description %}Instantly test SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for your domain with free, detailed guidance.{% endblock %}">
+  <meta name="description"
+    content="{% block meta_description %}Instantly test SPF, DMARC, MTA-STS, TLSRPT, DNSSEC, and BIMI for your domain with free, detailed guidance.{% endblock %}">
   <meta property="og:title" content="{% block og_title %}{{ site_name }} | Free DNS security analysis{% endblock %}" />
-  <meta property="og:description" content="{% block og_description %}Check your domain's email security in seconds for free with no sales pitch. 🚀 SPF, DMARC, & more made easy.{% endblock %}" />
+  <meta property="og:description"
+    content="{% block og_description %}Check your domain's email security in seconds for free with no sales pitch. 🚀 SPF, DMARC, & more made easy.{% endblock %}" />
   <meta property="og:type" content="{% block og_type %}website{% endblock %}" />
   <meta property="og:url" content="{{ canonical_url() }}" />
-  <meta property="og:image" content="{% block og_image %}{{ url_for('static', filename='card.webp', _external=True) }}{% endblock %}" />
-  <meta property="og:image:alt" content="{% block og_image_alt %}A card describing the features of {{ site_name }}{% endblock %}" />
+  <meta property="og:image"
+    content="{% block og_image %}{{ url_for('static', filename='card.webp', _external=True) }}{% endblock %}" />
+  <meta property="og:image:alt"
+    content="{% block og_image_alt %}A card describing the features of {{ site_name }}{% endblock %}" />
   <meta property="og:site_name" content="{{ site_name }}" />
   <meta name="twitter:card" content="summary_large_image" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet" />
-    {% block head %}{%endblock%}
-    <script type="application/ld+json">
+  {% block head %}{%endblock%}
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
@@ -38,11 +44,12 @@
         "price": "0",
         "priceCurrency": "USD"
       },
-      "description": "{% block ld_description %}Free SPF, DMARC, MX, MTA-STS, TLS-RPT, BIMI, and DNSSEC checker with clear pass/fail guidance.{% endblock %}"
+      "description": "{% block ld_description %}Free SPF, DMARC, MX, MTA-STS, TLSRPT, BIMI, and DNSSEC checker with clear pass/fail guidance.{% endblock %}"
     }
     
     </script>
 </head>
+
 <body>
   {% block before_content %}{% endblock %}
   {% block content %}{% endblock %}
@@ -56,4 +63,5 @@
     crossorigin="anonymous"></script>
   {%block scripts%}{% endblock %}
 </body>
+
 </html>
