--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -1,10 +1,10 @@
 {% extends "page.html.jinja" %}
 {% set page = 'domain' %}
 {% set title = domain ~ " - SPF, DMARC & more" %}
-{% block meta_description %}Check SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for {{ domain }}. Get instant results
+{% block meta_description %}Check SPF, DMARC, MTA-STS, TLSRPT, DNSSEC, and BIMI for {{ domain }}. Get instant results
 with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
 {% block og_title %}Domain security report for {{ domain }} | {{site_name}}{% endblock %}
-{% block og_description %}Complete analysis of SPF, DMARC, MTA-STS, TLS-RPT, DNSSEC, and BIMI for {{ domain }} by
+{% block og_description %}Complete analysis of SPF, DMARC, MTA-STS, TLSRPT, DNSSEC, and BIMI for {{ domain }} by
 {{site_name }}.{% endblock %}
 {% block head %}
 {% if not is_sample_domain %}
@@ -220,7 +220,9 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
       <div class="p-3 pt-0">
         <div class="intro mb-3">
           <h4 class="text-center">BIMI</h4>
-          <p>Brand Indicators for Message Identification (BIMI) is an emerging email specification that allows brand images such as logos to appear in the inbox and/or next to the from address in supporting mailbox providers.</p>
+          <p>Brand Indicators for Message Identification (BIMI) is an emerging email specification that allows brand
+            images such as logos to appear in the inbox and/or next to the from address in supporting mailbox providers.
+          </p>
           <p><a href="/guides/bimi">Learn more about how BIMI works</a>.</p>
         </div> <!-- End intro -->
         {% if results.bimi.error %}
@@ -443,8 +445,10 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
       <div class="p-3 pt-0">
         <div class="intro mb-3">
           <h4 class="text-center">MTA-STS</h4>
-          <p>SMTP MTA Strict Transport Security (MTA-STS) provides a way for domain owners to tell email services that they should only send email to the domain over a verified TLS connection to specific email servers. This prevent man-in-the-middle attacks.</p>
-          <p><a href="/guides/mta-sts-and-tls-rpt">Learn more about MTA-STS</a>.</p>
+          <p>SMTP MTA Strict Transport Security (MTA-STS) provides a way for domain owners to tell email services that
+            they should only send email to the domain over a verified TLS connection to specific email servers. This
+            prevent man-in-the-middle attacks.</p>
+          <p><a href="/guides/mta-sts-and-tlsrpt">Learn more about MTA-STS</a>.</p>
         </div> <!-- End intro -->
         {% if results.mta_sts.error %}
         <div class="alert alert-danger text-center mb-3" role="alert">
@@ -506,8 +510,8 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
     <div class="col-lg-4">
       <div class="p-3 pt-0">
         <div class="intro mb-3">
-          <h4 class="text-center">TLS-RPT</h4>
-          <p>SMTP TLS Reporting (TLS-RPT) is a reporting mechanism and format by which sending systems can share
+          <h4 class="text-center">TLSRPT</h4>
+          <p>SMTP TLS Reporting (TLSRPT) is a reporting mechanism and format by which sending systems can share
             statistics and specific information about potential failures to establish encrypted channels with recipient
             domains. Recipient domains can then use this information to both detect potential attacks and diagnose
             unintentional misconfigurations.</p>
@@ -519,7 +523,7 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
         </div>
         {% else %}
         <div class="alert alert-success text-center mb-3" role="alert">
-          This domain has a valid TLS-RPT record.
+          This domain has a valid TLSRPT record.
         </div>
         {% for warning in results.smtp_tls_reporting.warnings %}
         <div class="alert alert-warning text-center" role="alert">
