Fix TLSRPT link

--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -514,7 +514,7 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
           <p>SMTP TLS Reporting (TLSRPT) is a mechanism for sending email servers
           to provide statistics to domain owners about failures to establish TLS connections for SMTP. This allows
           domain owners to proactively identify TLS misconfigurations and man-in-the-middle attacks.</p>
-          <p><a href="/guides/mta-sts-and-tlsrpt#tlsrpt"</p>
+          <p><a href="/guides/mta-sts-and-tlsrpt#tlsrpt">Learn more about TLSRPT</a></p>
         </div> <!-- End intro -->
         {% if results.smtp_tls_reporting.error %}
         <div class="alert alert-danger text-center mb-3" role="alert">
