--- a/templates/guides/mta-sts-and-tlsrpt.html.jinja
+++ b/templates/guides/mta-sts-and-tlsrpt.html.jinja
@@ -101,7 +101,7 @@ Reporting (TLSRPT){% endblock%}
         open source DMARC parsing providers also support parsing TLSRPT reports, including <a
           href="https://domainaware.github.io/parsedmarc/">ParseDMARC</a>.</p>
       <p>Tto set up TLSRPT, simply publish a TLSRPT policy as a DNS TXT record at the subdomain <code>_smtp._tls</code>.
-        Like DMARC and MTA-STS DNS records, this DNS record consists of <code>tag=value</code> pairs, separated by semicolons.</p>
+        Like DMARC and MTA-STS DNS records, this DNS record consists of <code>tag=value</code> pairs separated by semicolons.</p>
         <table class="table table-bordered table-striped table-sm">
           <caption class="visually-hidden">A table of TLSRPT policy tags and descriptions</caption>
           <tbody>
