--- a/templates/guides/mta-sts-and-tlsrpt.html.jinja
+++ b/templates/guides/mta-sts-and-tlsrpt.html.jinja
@@ -80,7 +80,7 @@ Reporting (TLSRPT){% endblock%}
         mx: backupmx.example.com
         max_age: 604800
       </pre>
-      <p>Start out with a policy in <code>testing</code> mode, and briefly monitor TLS reporting (discussed below) for
+      <p>Start out with a policy in <code>testing</code> mode, and briefly monitor <a href="#tlsrpt">TLS reporting</a> for
         any
         legitimate failures. If no such failures are found, change the <code>mode</code> in the policy file to
         <code>enforce</code>, and update the <code>id</code> value in the <code>_mta-sts</code> TXT DNS record.
