--- a/templates/domain.html.jinja
+++ b/templates/domain.html.jinja
@@ -89,7 +89,7 @@ with clear, RFC-based guidance — free from {{ site_name }}.{% endblock %}
         {% for mechanism in results.spf.parsed.mechanisms %}
         {% if "%{" in mechanism.value %}
         <div class="alert alert-info text-center" role="alert">
-          <code>{{ mechanism.mechanism }}:{{ mechanism.value }}</code> uses SPF macros so a server (i.e., a hosted SPF
+          <code>{{ mechanism.mechanism }}:{{ mechanism.value }}</code> uses <a href="https://datatracker.ietf.org/doc/html/rfc7208#section-7">SPF macros</a> so a server (i.e., a hosted SPF
           service)
           can dynamically indicate if an IP address should be accepted in SPF validation.
         </div>
